--- a/Front_end/index.html
+++ b/Front_end/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/download.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>XetnghiemADN.com</title>
+    <title>ADN Testing Center</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
